# g2oPractice

./: CMakeLists.txt  PoseGraph.cpp  PoseRectify.cpp  lineFitting.cpp  main.cpp
